fix: minor phone layout bug fixes

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,6 @@
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: $default-font-size;
   line-height: 1.7;
   color: #777;
   box-sizing: border-box;
@@ -57,6 +56,11 @@ body {
   &:hover {
     transform: skewY(2deg) skewX(10deg) scale(1.1);
     text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+
+    @include respond(tab-port) {
+      transform: none;
+      text-shadow: none;
+    }
   }
 }
 
